# shelflife-ai

./: .env.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: dependencies.py  main.py  middleware.py  schemas.py
api/routes/: analytics.py  forecast.py  health.py  inventory.py  recommend.py  waste.py
chotulab-hub/: Dockerfile  index.html  nginx.conf
config/: settings.py
dashboard/: app.py  queries.py  styles.py
data_generator/: __init__.py  synthetic.py
db/: __init__.py  models.py  seed.py  session.py
docs_committed/: BUSINESS_GUIDE.md  TECHNICAL_AI_DEEP_DIVE.md
docs_diagrams/: 01-system-overview.md  02-api-request-flow.md  03-db-session-pooling.md  04-feature-engineering-flow.md  05-model-training-flow.md  06-scheduler-mlops.md  07-observability-flow.md  08-xgboost-simple.md
features/: engineering.py  store.py
infra/: coolify-setup.md  setup-server.sh
mlops/: __init__.py  drift_detection.py  model_registry.py  retrain.py  train_pipeline.py
models/: __init__.py  demand_forecast.py  evaluation.py  waste_risk.py
monitoring/: feedback.py  metrics.py
recommendation/: __init__.py  actions.py  engine.py
scripts/: backup_db.sh  healthcheck_prod.sh  rollback_model.py  run_daily_forecast.py  run_drift_check.py  run_feedback.py  run_retrain.py  test_api.py  test_high_risk.py  test_metrics.py
tests/: conftest.py  test_api.py  test_data_quality.py  test_features.py  test_models.py
(+8 files in other folders)
