[project]
name = "shelflife-ai"
version = "0.1.0"
description = "Production ML platform for demand forecasting and food waste reduction"
requires-python = ">=3.11,<3.14"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "mlflow>=2.12",
    "shap>=0.45",
    "joblib>=1.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "apscheduler>=3.10",
    "gunicorn>=22.0",
    "streamlit>=1.35",
    "plotly>=5.22",
    "altair>=5.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "data_generator",
    "db",
    "features",
    "models",
    "mlops",
    "monitoring",
    "recommendation",
    "api",
    "scripts",
    "dashboard",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
